Replace legacy google u-boot with fsl default variant

--- a/conf/machine/coral-dev.conf
+++ b/conf/machine/coral-dev.conf
@@ -32,7 +32,7 @@ MACHINE_SOCARCH_FILTER:append:mx8mq = " virtual/libopenvg virtual/libgles1 virtu
 KERNEL_DEVICETREE:use-nxp-bsp = "freescale/imx8mq-phanbell.dtb"
 KERNEL_DEVICETREE:use-mainline-bsp = "freescale/imx8mq-phanbell.dtb"
 
-IMX_DEFAULT_BOOTLOADER = "u-boot-coral"
+IMX_DEFAULT_BOOTLOADER = "u-boot-imx"
 
 UBOOT_SUFFIX = "bin"
 
@@ -53,7 +53,7 @@ DDR_FIRMWARE_NAME = "\
 "
 
 # Set u-boot DTB
-UBOOT_DTB_NAME = "fsl-imx8mq-phanbell.dtb"
+UBOOT_DTB_NAME = "imx8mq-phanbell.dtb"
 
 # Set ATF platform name
 ATF_PLATFORM = "imx8mq"
