swupdate update futher intergration.

--- a/recipes-support/swupdate/swupdate/coral-dev/swupdate.cfg
+++ b/recipes-support/swupdate/swupdate/coral-dev/swupdate.cfg
@@ -22,7 +22,7 @@ download :
 };
 
 identify : (
-	{ name = "pico-imx7d"; value = "rev1.2"; }
+	{ name = "coral-dev"; value = "rev1"; }
 );
 
 webserver :
