Create 2 versions of boot script to allow swupdate to switch boot partition

--- a/conf/machine/coral-dev.conf
+++ b/conf/machine/coral-dev.conf
@@ -71,6 +71,6 @@ IMX_BOOT_SEEK = "33"
 
 OPTEE_BIN_EXT = "8mq"
 
-IMAGE_BOOT_FILES += "boot.scr"
+IMAGE_BOOT_FILES += "boot_a.scr boot_b.scr"
 
 WKS_FILE = "coral-bootpart.wks.in"
