Don't build OPTEE, broken

--- a/conf/machine/coral-dev.conf
+++ b/conf/machine/coral-dev.conf
@@ -18,8 +18,8 @@ PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-fslc"
 PREFERRED_PROVIDER_virtual/kernel:use-nxp-bsp = "linux-coral"
 KBUILD_DEFCONFIG = "imx_v8_defconfig"
 
-MACHINE_FEATURES += "pci wifi bluetooth bcm43455 bcm4356"
-MACHINE_FEATURES:append:use-nxp-bsp = " optee bcm4359"
+MACHINE_FEATURES += " pci wifi bluetooth bcm43455 bcm4356 "
+MACHINE_FEATURES:append:use-nxp-bsp = " bcm4359 "
 
 MACHINE_EXTRA_RDEPENDS += "\
     kernel-modules \
