This makes software updates trough swupdate work.

--- a/recipes-support/swupdate/swupdate/coral-dev/swupdate.cfg
+++ b/recipes-support/swupdate/swupdate/coral-dev/swupdate.cfg
@@ -4,16 +4,16 @@ globals :
 	verbose = true;
 	loglevel = 5;
 	syslog = true;
-	no-downgrading = "1.0.0";
+	# no-downgrading = "1.0.0";
 };
 
-processes :
-(
-    {
-        name = "swupdate-sysrestart";
-        exec = "/usr/bin/swupdate-sysrestart";
-    }
-);
+# processes :
+# (
+#     {
+#         name = "swupdate-sysrestart";
+#         exec = "/usr/bin/swupdate-sysrestart";
+#     }
+# );
 
 download :
 {
